compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__assert1.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "pub fn go(x) { let assert #(1, 2) = x }"
---
----- SOURCE CODE
pub fn go(x) { let assert #(1, 2) = x }

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  if (!(x[0] === 1 && x[1] === 2)) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      1,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 15, end: 37, pattern_start: 26, pattern_end: 33 }
    )
  }
  return x;
}
