compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__assert2.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "\n    fn go(x) {\n        let msg = \"custom\" <> \" error\"\n        let assert as msg Ok(x) = Ok(1)\n    }\n    "
---
import { Ok, makeError } from "../gleam.mjs";

function go(x) {
  let msg = "custom" + " error";
  let $ = new Ok(1);
  if (!$.isOk()) {
    throw makeError("assignment_no_match", "my/mod", 4, "go", msg, { value: $ })
  }
  let x$1 = $[0];
  return $;
}
