compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__module_const_var-2.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
assertion_line: 160
expression: "\npub const int = 42\npub const int_alias = int \npub const compound: #(Int, Int) = #(int, int_alias)\n"
---
export const int: number;

export const int_alias: number;

export const compound: [number, number];

