compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__module_const_var.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "\npub const int = 42\npub const int_alias = int \npub fn use_int_alias() { int_alias }\n\npub const compound: #(Int, Int) = #(int, int_alias)\npub fn use_compound() { compound.0 + compound.1 }\n"
---
export const int = 42;

export const int_alias = int;

export function use_int_alias() {
  return int_alias;
}

export const compound = [int, int_alias];

export function use_compound() {
  return compound[0] + compound[1];
}

