compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__rebound_argument.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "pub fn main(x) {\n  let x = False\n  x\n}\n"
---
----- SOURCE CODE
pub fn main(x) {
  let x = False
  x
}


----- COMPILED JAVASCRIPT
export function main(x) {
  let x$1 = false;
  return x$1;
}
