compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__returning_literal_subject.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
assertion_line: 83
expression: "fn go(x) { let assert 1 = x + 1 }"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  let $ = x + 1;
  if ($ !== 1) {
    throw makeError(
      "let_assert",
      "my/mod",
      1,
      "go",
      "Assertion pattern match failed",
      { value: $ }
    )
  }
  return $;
}
